<resources>
    <string name="app_name">tugasday11</string>
    <string name="games">Games</string>
    <string name="apps">apps</string>
    <string name="notification">Notifications</string>
    <string name="offers">offers</string>
    <string name="books">Books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>