<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/game_controller_outline"
        android:title="@string/games" />

    <item
        android:id="@+id/navigation_apps"
        android:icon="@drawable/baseline_apps_24"
        android:title="@string/apps" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/baseline_local_offer_24"
        android:title="@string/offers" />

    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/baseline_book_24"
        android:title="@string/books" />
</menu>